Complete gradle harmonization - fix conditional packageAll task and configuration cache issues
Co-authored-by: buccancs <58235835+buccancs@users.noreply.github.com>